--- a/Selu383.SP25.P03.Web/src/pages/MovieDetailsPage/MovieDetailsPage.css
+++ b/Selu383.SP25.P03.Web/src/pages/MovieDetailsPage/MovieDetailsPage.css
@@ -1,6 +1,8 @@
 .movie-details-page {
   min-height: 100vh;
   background-color: #000000;
+  width: 100vw;
+  max-width: unset;
 }
 
 /* Movie hero section */
