Fixed some issues

--- a/Selu383.SP25.P03.Web/src/pages/BookingPage/BookingPage1.css
+++ b/Selu383.SP25.P03.Web/src/pages/BookingPage/BookingPage1.css
@@ -5,6 +5,8 @@
   width: 100%;
   color: #f8f9fa;
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  width: 100vw;
+  max-width: unset;
 }
 
 /* Header section */
